--- a/weedWeb/src/app/login/login.component.css
+++ b/weedWeb/src/app/login/login.component.css
@@ -2,6 +2,13 @@
   position: static;
 }
 
+.pantalla {
+  max-width: 100%;
+  max-height: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+
 .carousel-caption {
   padding-left: 40px;
   padding-right: 0px;
@@ -26,15 +33,6 @@
 
 .carousel-inner {
   height: 100vh;
-}
-
-.form-container {
-  max-width: 400px;
-  z-index: 100;
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
 }
 
 .btn-primary {
@@ -62,8 +60,14 @@ a:hover {
 }
 
 .form-container {
+  z-index: 100;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  max-width: 20%;
   width: 30%;
-  height: 70%;
+  min-height: 70%;
   position: absolute;
   padding-left: 1rem;
   padding-right: 0rem;
@@ -75,10 +79,31 @@ a:hover {
   background-color: rgba(228, 237, 210, 0.863);
   border-radius: 70px;
 }
+.form-container-home {
+  z-index: 100;
+  position: absolute;
+
+  top: 0%;
+  max-width: 5%;
+  width: 5%;
+  height: 1%;
+  min-height: 1%;
+  position: absolute;
+  padding-left: 0rem;
+  padding-right: 0rem;
+  padding-top: 0rem;
+  margin-block-end: auto;
+  border-radius: 70px;
+}
 
 .container {
   padding-left: 20rem;
   padding-right: 5rem;
+}
+
+.homecontainer {
+  padding-left: 1rem;
+  padding-right: 0rem;
 }
 
 .img-opaca {
