--- a/weedWeb/src/app/login/login.component.html
+++ b/weedWeb/src/app/login/login.component.html
@@ -1,45 +1,56 @@
-<div style="background-color: black">
-  <div
-    id="carouselExampleInterval"
-    class="carousel slide"
-    data-bs-ride="carousel"
-  >
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="2000">
-        <img
-          src="https://www.comunidad.madrid/sites/default/files/styles/colorbox_modal/public/doc/sanidad/drog/cannabis_plantacion.jpg?itok=E8HoucXT"
-          class="d-block w-100 img-fluid img-opaca"
-          alt="..."
-        />
-        <div class="carousel-caption d-none d-md-block">
-          <h5>LA GRANJA DEL GRANJERO PEPA</h5>
-          <p>Conoce como cultivar y cuidad tus amigos</p>
+<div class="pantalla">
+  <div style="background-color: black">
+    <div
+      id="carouselExampleInterval"
+      class="carousel slide"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="2000">
+          <img
+            src="https://www.comunidad.madrid/sites/default/files/styles/colorbox_modal/public/doc/sanidad/drog/cannabis_plantacion.jpg?itok=E8HoucXT"
+            class="d-block w-100 img-fluid img-opaca"
+            alt="..."
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>LA GRANJA DEL GRANJERO PEPA</h5>
+            <p>Conoce como cultivar y cuidad tus amigos</p>
+          </div>
         </div>
-      </div>
-      <div class="carousel-item" bsdata--interval="2000">
-        <img
-          src="https://www.cdc.gov/marijuana/featured-topics/images/cannabis-plant.jpg?_=33642"
-          class="d-block w-100 img-fluid img-opaca"
-          alt="..."
-        />
-        <div class="carousel-caption d-none d-md-block">
-          <h5>El cannabis es vida</h5>
-          <p>El cannabis calma los dolores y se utiliza como medicina</p>
+        <div class="carousel-item" bsdata--interval="2000">
+          <img
+            src="https://www.cdc.gov/marijuana/featured-topics/images/cannabis-plant.jpg?_=33642"
+            class="d-block w-100 img-fluid img-opaca"
+            alt="..."
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>El cannabis es vida</h5>
+            <p>El cannabis calma los dolores y se utiliza como medicina</p>
+          </div>
         </div>
-      </div>
-      <div class="carousel-item" bsdata--interval="2000">
-        <img
-          src="http://agenciadenoticias.unal.edu.co/fileadmin/Agencia_de_Noticias/Imagenes/2022/08-Agosto/362/AgenciaUNAL-010822-01.jpg"
-          class="d-block w-100 img-fluid img-opaca"
-          alt="..."
-        />
-        <div class="carousel-caption d-none d-md-block">
-          <h5>¿Sabias qué?</h5>
-          <p>Los mangos potencian los efectos de la marihuana</p>
+        <div class="carousel-item" bsdata--interval="2000">
+          <img
+            src="http://agenciadenoticias.unal.edu.co/fileadmin/Agencia_de_Noticias/Imagenes/2022/08-Agosto/362/AgenciaUNAL-010822-01.jpg"
+            class="d-block w-100 img-fluid img-opaca"
+            alt="..."
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>¿Sabias qué?</h5>
+            <p>Los mangos potencian los efectos de la marihuana</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
+
+  <div class="homecontainer">
+    <div class="form-container-home">
+      <h1>
+        <button class="btn btn-primary btn-block" (click)="home()">HOME</button>
+      </h1>
+    </div>
+  </div>
+
   <div class="container">
     <div class="form-container">
       <form>
