--- a/weedWeb/src/app/components/menubaruser/menubaruser.component.html
+++ b/weedWeb/src/app/components/menubaruser/menubaruser.component.html
@@ -21,6 +21,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/Dashboard">Estadisticas</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/Time">Pronostíco de tiempo</a>
+      </li>
       <li class="nav-item dropdown">
         <a
           class="nav-link dropdown-toggle"
