--- a/weedWeb/src/app/login/login.component.html
+++ b/weedWeb/src/app/login/login.component.html
@@ -1,110 +1,116 @@
-<div class="pantalla">
-  <div style="background-color: black">
-    <div
-      id="carouselExampleInterval"
-      class="carousel slide"
-      data-bs-ride="carousel"
-    >
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="2000">
-          <img
-            src="https://www.comunidad.madrid/sites/default/files/styles/colorbox_modal/public/doc/sanidad/drog/cannabis_plantacion.jpg?itok=E8HoucXT"
-            class="d-block w-100 img-fluid img-opaca"
-            alt="..."
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>LA GRANJA DEL GRANJERO PEPA</h5>
-            <p>Conoce como cultivar y cuidad tus amigos</p>
+<div ng-controller="controller">
+  <div class="pantalla">
+    <div style="background-color: black">
+      <div
+        id="carouselExampleInterval"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="2000">
+            <img
+              src="https://www.comunidad.madrid/sites/default/files/styles/colorbox_modal/public/doc/sanidad/drog/cannabis_plantacion.jpg?itok=E8HoucXT"
+              class="d-block w-100 img-fluid img-opaca"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>LA GRANJA DEL GRANJERO PEPA</h5>
+              <p>Conoce como cultivar y cuidad tus amigos</p>
+            </div>
           </div>
-        </div>
-        <div class="carousel-item" bsdata--interval="2000">
-          <img
-            src="https://www.cdc.gov/marijuana/featured-topics/images/cannabis-plant.jpg?_=33642"
-            class="d-block w-100 img-fluid img-opaca"
-            alt="..."
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>El cannabis es vida</h5>
-            <p>El cannabis calma los dolores y se utiliza como medicina</p>
+          <div class="carousel-item" bsdata--interval="2000">
+            <img
+              src="https://www.cdc.gov/marijuana/featured-topics/images/cannabis-plant.jpg?_=33642"
+              class="d-block w-100 img-fluid img-opaca"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>El cannabis es vida</h5>
+              <p>El cannabis calma los dolores y se utiliza como medicina</p>
+            </div>
           </div>
-        </div>
-        <div class="carousel-item" bsdata--interval="2000">
-          <img
-            src="http://agenciadenoticias.unal.edu.co/fileadmin/Agencia_de_Noticias/Imagenes/2022/08-Agosto/362/AgenciaUNAL-010822-01.jpg"
-            class="d-block w-100 img-fluid img-opaca"
-            alt="..."
-          />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>¿Sabias qué?</h5>
-            <p>Los mangos potencian los efectos de la marihuana</p>
+          <div class="carousel-item" bsdata--interval="2000">
+            <img
+              src="http://agenciadenoticias.unal.edu.co/fileadmin/Agencia_de_Noticias/Imagenes/2022/08-Agosto/362/AgenciaUNAL-010822-01.jpg"
+              class="d-block w-100 img-fluid img-opaca"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>¿Sabias qué?</h5>
+              <p>Los mangos potencian los efectos de la marihuana</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="homecontainer">
-    <div class="form-container-home">
-      <h1>
-        <button
-          class="btn"
-          data-bs-toggle="offcanvas"
-          href="#offcanvasExample"
-          role="button"
-          aria-controls="offcanvasExample"
-        >
-          <img src="../../../assets/image/logo.png " width="70" height="50" />
-          <div class="text-center text-white">HOME</div>
-        </button>
-      </h1>
+    <div class="homecontainer">
+      <div class="form-container-home">
+        <h1>
+          <button
+            class="btn"
+            data-bs-toggle="offcanvas"
+            href="#offcanvasExample"
+            role="button"
+            aria-controls="offcanvasExample"
+          >
+            <img src="../../../assets/image/logo.png " width="70" height="50" />
+            <div class="text-center text-white">HOME</div>
+          </button>
+        </h1>
+      </div>
     </div>
-  </div>
 
-  <div class="container">
-    <div class="form-container">
-      <form>
-        <h2 class="text-center">Iniciar sesión</h2>
+    <div class="container">
+      <div class="form-container">
+        <form>
+          <h2 class="text-center">Iniciar sesión</h2>
 
-        <div class="form-group">
-          <label for="username" class="letter">Nombre de usuario:</label>
-          <div class="col-md-10">
-            <input
-              type="email"
-              class="form-control"
-              id="username"
-              placeholder="Ejemplo@gmail.com"
-            />
+          <div class="form-group">
+            <label for="username" class="letter">Nombre de usuario:</label>
+            <div class="col-md-10">
+              <input
+                type="text"
+                name="userlogin.email"
+                id="username"
+                pInputText
+                [(ngModel)]="userlogin.email"
+                placeholder="Ejemplo@gmail.com"
+              />
+            </div>
           </div>
-        </div>
 
-        <div class="form-group">
-          <label for="password" class="letter">Contraseña:</label>
-          <div class="col-md-10">
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              placeholder="********"
-            />
+          <div class="form-group">
+            <label for="password" class="letter">Contraseña:</label>
+            <div class="col-md-10">
+              <input
+                type="password"
+                class="form-control"
+                name="userlogin.password"
+                [(ngModel)]="userlogin.password"
+                id="password"
+                placeholder="********"
+              />
+            </div>
           </div>
-        </div>
-        <div class="my-5">
-          <div class="d-flex justify-content-center">
-            <button
-              type="submit"
-              class="btn btn-primary btn-block"
-              (click)="login()"
-            >
-              Ingresar
-            </button>
+          <div class="my-5">
+            <div class="d-flex justify-content-center">
+              <button
+                type="submit"
+                class="btn btn-primary btn-block"
+                (click)="login()"
+              >
+                Ingresar
+              </button>
+            </div>
           </div>
-        </div>
-        <div class="col-md-10 my-2">
-          <a href="#">¿Olvidaste tu contraseña?</a>
-        </div>
+          <div class="col-md-10 my-2">
+            <a href="#">¿Olvidaste tu contraseña?</a>
+          </div>
 
-        <a href="#">Registrarse</a>
-      </form>
+          <a href="#">Registrarse</a>
+        </form>
+      </div>
     </div>
   </div>
 </div>
