register company and user

--- a/weedWeb/src/app/login/login.component.html
+++ b/weedWeb/src/app/login/login.component.html
@@ -108,7 +108,11 @@
             <a href="#">¿Olvidaste tu contraseña?</a>
           </div>
 
-          <a href="#">Registrarse</a>
+          <div class="col-md-10 my-2">
+            <a href="/Register">Registrar usuario</a>
+          </div>
+
+          <a href="/RegisterCompany">Registrar empresa</a>
         </form>
       </div>
     </div>
