--- a/weedWeb/src/app/register/register.component.html
+++ b/weedWeb/src/app/register/register.component.html
@@ -57,7 +57,8 @@
             <label>Nombre</label>
             <input
               type="text"
-              name="name"
+              name="userRegister.firstName"
+              [(ngModel)]="userRegister.firstName"
               class="form-control"
               required
             />
@@ -67,7 +68,8 @@
             <label>Apellido</label>
             <input
               type="text"
-              name="lastName"
+              name="userRegister.lastName"
+              [(ngModel)]="userRegister.lastName"
               class="form-control"
               required
             />
@@ -77,7 +79,8 @@
             <label>Cédula</label>
             <input
               type="text"
-              name="national_id"
+              name="userRegister.nationalId"
+              [(ngModel)]="userRegister.nationalId"
               class="form-control"
               required
             />
@@ -87,7 +90,8 @@
             <label>Email</label>
             <input
               type="email"
-              name="email"
+              name="userRegister.email"
+              [(ngModel)]="userRegister.email"
               class="form-control"
               required
             />
@@ -97,7 +101,8 @@
             <label>Contraseña</label>
             <input
               type="text"
-              name="password"
+              name="userRegister.password"
+              [(ngModel)]="userRegister.password"
               class="form-control"
               required
             />
@@ -107,7 +112,8 @@
             <label>Número teléfonico</label>
             <input
               type="number"
-              name="phone_number"
+              name="userRegister.phoneNumber"
+              [(ngModel)]="userRegister.phoneNumber"
               class="form-control"
               required
             />
