--- a/weedWeb/src/app/login/login.component.html
+++ b/weedWeb/src/app/login/login.component.html
@@ -45,7 +45,6 @@
     </div>
 
     <div class="homecontainer">
-
       <div class="form-container-home">
         <h1>
           <button
@@ -71,7 +70,8 @@
             <label for="username" class="letter">Nombre de usuario:</label>
             <div class="col-md-10">
               <input
-                type="text"
+                type="email"
+                class="form-control"
                 name="userlogin.email"
                 id="username"
                 pInputText
