fix and add service login

--- a/weedWeb/src/app/register/register.component.html
+++ b/weedWeb/src/app/register/register.component.html
@@ -37,8 +37,8 @@
         <button
           class="btn"
           data-bs-toggle="offcanvas"
-          href="#offcanvasExample"
           role="button"
+          (click)="home()"
           aria-controls="offcanvasExample"
         >
           <img src="../../../assets/image/logo.png " width="70" height="50" />
