--- a/weedWeb/src/app/home/home.component.html
+++ b/weedWeb/src/app/home/home.component.html
@@ -32,19 +32,21 @@
             alt="..."
           />
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+            <h5>SEREMOS TUS COMPAÑEROS
+            </h5>
+            <p>Estaremos aqui para ofrecerte novedades, consejos y logistica para tus productos.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img
-            src="https://i.pinimg.com/736x/b5/c4/37/b5c43722448e93475ec2c2724902c9ed.jpg"
+            src="https://cloudfront-us-east-1.images.arcpublishing.com/infobae/NCXKFDMRGVHOZAQXQ25SJM4JAY.jpg"
             class="d-block w-100 img-fluid img-opaca"
             alt="..."
           />
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h5>ESTARÁS AL TANTO DE TUS CULTIVOS </h5>
+            <p> Podrás ver los futuros cambios de clima y como afectará a tus productos </p>
+
           </div>
         </div>
         <div class="carousel-item">
@@ -54,8 +56,8 @@
             alt="..."
           />
           <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+            <h5>QUEREMOS SER PARTE DE TU PROCESO</h5>
+            <p>Esta herramienta y equipo quiere ayudarte a crecer en todo lo que sea posible para que seas un buen granjero.</p>
           </div>
         </div>
       </div>
@@ -90,12 +92,11 @@
         alt="No disponible"
       />
       <div class="card-img-overlay">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Marihuanol</h5>
         <p class="card-text">
-          This is a wider card with supporting text below as a natural lead-in
-          to additional content. This content is a little bit longer.
+          La marihuana como uso medicinal se ha utilizado desde muchos paises con el objetivo de calmar el dolor de las enfermades
         </p>
-        <p class="card-text">Last updated 3 mins ago</p>
+        <p class="card-text"></p>
       </div>
     </div>
     <div class="card bg-dark text-white cuadro-opaco">
@@ -105,12 +106,11 @@
         alt="No disponible"
       />
       <div class="card-img-overlay">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Prohibido olvidar</h5>
         <p class="card-text">
-          This is a wider card with supporting text below as a natural lead-in
-          to additional content. This content is a little bit longer.
+          La marihuana igualmente tiene efectos beneficiosos contra las enfermedades neurodegenerativas, tales como el Alzheimer
         </p>
-        <p class="card-text">Last updated 3 mins ago</p>
+        <p class="card-text"></p>
       </div>
     </div>
     <div class="card bg-dark text-white cuadro-opaco">
@@ -120,18 +120,14 @@
         alt="..."
       />
       <div class="card-img-overlay">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Relajación</h5>
         <p class="card-text">
-          This is a wider card with supporting text below as a natural lead-in
-          to additional content. This content is a little bit longer.
-        </p>
-        <p class="card-text">Last updated 3 mins ago</p>
+          No es un secreto que la marihuana es un tabú marcado por la sociedad es una practica mal vista,
+        sin embargo ayuda al estres y la relajación de las personas cuando se fuma (cantidas moderadas)</p>
+        <p class="card-text"></p>
       </div>
     </div>
   </div>
 </div>
 
-<div class="container">
-  <h1>Como seria</h1>
-</div>
 <app-footer></app-footer>
