--- a/weedWeb/src/app/info/info.component.html
+++ b/weedWeb/src/app/info/info.component.html
@@ -1,1 +1,5 @@
-<p>info works!</p>
+<p-toast></p-toast>
+
+<div class="card flex justify-content-center">
+  <p-inputSwitch [(ngModel)]="checked"></p-inputSwitch>
+</div>
