--- a/weedWeb/src/app/map/map.component.css
+++ b/weedWeb/src/app/map/map.component.css
@@ -1,22 +1,36 @@
 @import url(https://unpkg.com/leaflet@1.9.3/dist/leaflet.css);
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700);
+
+.html,.Principal{
+  height: 100vh;
+  background:#332222 ;
+}
 /*Mapa */
 #map {
   height: 600px;
   width: 600px;
   border: rgb(0, 0, 0) 5px double;
   float: right;
-  margin-top: 5vmin;
+  margin-top: 2vmin;
   margin-left: auto;
   margin-right: 5vmin;
-  display: table;
+  display: flex;
+}
+/*Tabla*/
+#tabla{
+  max-width: 450px;
+  display: flex;
+  margin-right: 10px;
+  margin: 0 auto;
+  margin-top: 5vmax;
 }
 /*Texto */
 #textoInicial {
   font-style: italic;
   font-size: 40px;
   text-align: center;
-  margin-top: 5vmin;
+  margin-top: 3vmin;
+  margin-bottom: 2vmin;
   font-weight: bold;
 }
 #textoSec {
