fix password html in register, update table crud and message register

--- a/weedWeb/src/app/components/menubaruser/menubaruser.component.html
+++ b/weedWeb/src/app/components/menubaruser/menubaruser.component.html
@@ -24,7 +24,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/Time">Pronostíco de tiempo</a>
       </li>
-      <li class="nav-item dropdown">
+      <!-- <li class="nav-item dropdown">
         <a
           class="nav-link dropdown-toggle"
           href="#"
@@ -42,7 +42,7 @@
           </li>
           <li><a class="dropdown-item" href="#">Something else here</a></li>
         </ul>
-      </li>
+      </li> -->
     </ul>
     <form class="d-flex mt-3" role="search">
       <input
@@ -51,7 +51,7 @@
         placeholder="Search"
         aria-label="Search"
       />
-      <button class="btn btn-success" type="submit">Search</button>
+      <button class="btn btn-success" type="submit">Buscar</button>
     </form>
   </div>
 </div>
