--- a/weedWeb/src/app/register-company/register-company.component.html
+++ b/weedWeb/src/app/register-company/register-company.component.html
@@ -78,7 +78,7 @@
           <div class="form-group col-md-12">
             <label>Contraseña</label>
             <input
-              type="text"
+              type="password"
               name="password"
               [(ngModel)]="companyRegister.password"
               class="form-control"
