--- a/weedWeb/src/app/register/register.component.html
+++ b/weedWeb/src/app/register/register.component.html
@@ -100,7 +100,7 @@
           <div class="form-group col-md-12">
             <label>Contraseña</label>
             <input
-              type="text"
+              type="password"
               name="userRegister.password"
               [(ngModel)]="userRegister.password"
               class="form-control"
