--- a/weedWeb/src/app/create-farm/create-farm.component.css
+++ b/weedWeb/src/app/create-farm/create-farm.component.css
@@ -25,6 +25,10 @@
   justify-content: center;
   font-weight: bold;
   color:#556B24
+}
 
+.model .register-farm{
+  width: '50vw';
+  display: flex;
 
 }
