--- a/weedWeb/src/app/create-farm/create-farm.component.html
+++ b/weedWeb/src/app/create-farm/create-farm.component.html
@@ -56,6 +56,7 @@
             type="submit"
             class="btn btn-primary btn-block"
             (click)="showParcela()"
+            (click)="createFarm()"
           >
             Crear granja
           </button>
