--- a/weedWeb/src/app/create-farm/create-farm.component.html
+++ b/weedWeb/src/app/create-farm/create-farm.component.html
@@ -4,17 +4,22 @@
     <button
       class="btn"
       data-bs-toggle="offcanvas"
-
       role="button"
       aria-controls="offcanvasExample"
       (click)="showFarm()"
     >
-      <img src="../../../assets/image/createFarm.svg "/>
+      <img src="../../../assets/image/createFarm.svg " />
       <div class="text-button">Crea tu primera granja</div>
     </button>
   </h1>
 
-  <p-dialog [(visible)]="visibleA" [style]="{width: '50vw'}" class="model">
+  <p-dialog
+    [(visible)]="visibleA"
+    [style]="{ width: '50vw' }"
+    [modal]="true"
+    class="model"
+    styleClass="p-fluid"
+  >
     <form>
       <h2 class="text-center">Granja</h2>
       <div class="form-row">
@@ -23,7 +28,7 @@
           <input
             type="text"
             name="farmCreate.farmName"
-            [(ngModel)] = "farmCreate.farm_name"
+            [(ngModel)]="farmCreate.farm_name"
             class="form-control"
             required
           />
@@ -34,7 +39,7 @@
           <input
             type="number"
             name="farmCreate.latitude"
-            [(ngModel)] = "farmCreate.latitude"
+            [(ngModel)]="farmCreate.latitude"
             class="form-control"
             required
           />
@@ -45,12 +50,12 @@
           <input
             type="text"
             name="farmCreate.longitude"
-            [(ngModel)] = "farmCreate.longitude"
+            [(ngModel)]="farmCreate.longitude"
             class="form-control"
             required
           />
         </div>
-        <br>
+        <br />
         <div class="register-farm">
           <button
             type="submit"
@@ -65,7 +70,7 @@
     </form>
   </p-dialog>
 
-  <p-dialog [(visible)]="visibleB" [style]="{width: '50vw'}">
+  <p-dialog [(visible)]="visibleB" [style]="{ width: '50vw' }">
     <form>
       <h2 class="text-center">Parcela</h2>
       <div class="form-row">
@@ -83,7 +88,7 @@
           <input
             type="number"
             name="parcelaCreate.width"
-            [(ngModel)] = "parcelaCreate.width"
+            [(ngModel)]="parcelaCreate.width"
             class="form-control"
           />
         </div>
@@ -92,7 +97,7 @@
           <input
             type="number"
             name="parcelaCreate.length"
-            [(ngModel)] = "parcelaCreate.length"
+            [(ngModel)]="parcelaCreate.length"
             class="form-control"
           />
         </div>
@@ -101,12 +106,12 @@
           <input
             type="text"
             name="parcelaCreate.crop_modality"
-            [(ngModel)] = "parcelaCreate.crop_modality"
+            [(ngModel)]="parcelaCreate.crop_modality"
             class="form-control"
             required
           />
         </div>
-        <br>
+        <br />
         <div class="register-parcel">
           <button
             type="submit"
