--- a/weedWeb/src/app/map/map.component.html
+++ b/weedWeb/src/app/map/map.component.html
@@ -20,49 +20,7 @@
     >
       Aquí podras observar tus parcelas y las disponibles
     </p>
-    <!-- <p-table
-      id="tabla"
-      styleClass="p-datatable-gridlines"
-      [value]="products"
-      responsiveLayout="scroll"
-      [scrollable]="false"
-      scrollHeight="400px"
-    >
-      <ng-template pTemplate="header">
-        <tr>
-          <th>Nombre</th>
-          <th>Fecha de creación</th>
-          <th>Información</th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-parcels>
-        <tr>
-          <td>{{ parcels.farm_name }}</td>
-          <td>{{ parcels.create_date }}</td>
-          <td>
-            <button
-              pButton
-              pRipple
-              icon="pi pi-info"
-              class="p-button-rounded p-button-success mr-2"
-            ></button>
-          </td>
-        </tr>
-      </ng-template>
-    </p-table> -->
     <div class="card">
-      <p-toolbar styleClass="mb-4 ">
-        <ng-template pTemplate="left"> </ng-template>
-        <button
-          pButton
-          pRipple
-          label="Nueva parcela"
-          icon="pi pi-plus"
-          class="p-button-success mr-2"
-        ></button>
-
-        <ng-template pTemplate="right"> </ng-template>
-      </p-toolbar>
       <p-table
         #dt
         [value]="products"
@@ -121,8 +79,9 @@
               <button
                 pButton
                 pRipple
-                icon="pi pi-pencil"
+                icon="pi pi-info"
                 class="p-button-rounded p-button-success mr-2"
+                (click)="editProduct(product)"
               ></button>
             </td>
           </tr>
