Added google maps component, <app-map-google> for to use in any html

--- a/weedWeb/src/app/info/info.component.html
+++ b/weedWeb/src/app/info/info.component.html
@@ -1,5 +1,1 @@
-<p-toast></p-toast>
-
-<div class="card flex justify-content-center">
-  <p-inputSwitch [(ngModel)]="checked"></p-inputSwitch>
-</div>
+<p-toast></p-toast> <app-map-google></app-map-google>
