--- a/weedWeb/src/app/components/map/map.component.html
+++ b/weedWeb/src/app/components/map/map.component.html
@@ -1,4 +1,4 @@
-<input type="text" [(ngModel)]="address" #inputPlaces id="inputPlaces" />
+<input type="text" [(ngModel)]="address" #inputPlaces id="inputPlaces"  class="form-control"/>
 <button (click)="geocodeAddres()">Buscar</button>
 <google-map
   height="400px"
