--- a/weedWeb/src/app/map/map.component.html
+++ b/weedWeb/src/app/map/map.component.html
@@ -9,7 +9,8 @@
       margin: '0 auto'
     }"
   >
-    <div id="map" class="card"></div>
+    <app-map-google id="map" class="card"></app-map-google>
+
     <p
       style="
         font-size: 25px;
@@ -20,49 +21,8 @@
     >
       Aquí podras observar tus parcelas y las disponibles
     </p>
-    <!-- <p-table
-      id="tabla"
-      styleClass="p-datatable-gridlines"
-      [value]="products"
-      responsiveLayout="scroll"
-      [scrollable]="false"
-      scrollHeight="400px"
-    >
-      <ng-template pTemplate="header">
-        <tr>
-          <th>Nombre</th>
-          <th>Fecha de creación</th>
-          <th>Información</th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-parcels>
-        <tr>
-          <td>{{ parcels.farm_name }}</td>
-          <td>{{ parcels.create_date }}</td>
-          <td>
-            <button
-              pButton
-              pRipple
-              icon="pi pi-info"
-              class="p-button-rounded p-button-success mr-2"
-            ></button>
-          </td>
-        </tr>
-      </ng-template>
-    </p-table> -->
-    <div class="card">
-      <p-toolbar styleClass="mb-4 ">
-        <ng-template pTemplate="left"> </ng-template>
-        <button
-          pButton
-          pRipple
-          label="Nueva parcela"
-          icon="pi pi-plus"
-          class="p-button-success mr-2"
-        ></button>
 
-        <ng-template pTemplate="right"> </ng-template>
-      </p-toolbar>
+    <div class="card">
       <p-table
         #dt
         [value]="products"
