--- a/weedWeb/src/app/map/map.component.html
+++ b/weedWeb/src/app/map/map.component.html
@@ -1,6 +1,6 @@
 <menu-bar-user></menu-bar-user>
 <div id="Principal" style="display: flexbox">
-  <div id="textoInicial" style="text-align: center">Mapa de parcelas</div>
+  <div id="textoInicial" style="text-align: center">Mapa de granjas</div>
   <p-card
     [style]="{
       display: 'flexbox',
@@ -19,7 +19,7 @@
         display: flexbox;
       "
     >
-      Aquí podras observar tus parcelas y las disponibles
+      Aquí podras observar tus granjas y las agregar nuevas parcelas
     </p>
     <!-- <p-table
       id="tabla"
@@ -112,7 +112,7 @@
                 pRipple
                 icon="pi pi-info"
                 class="p-button-rounded p-button-success mr-2"
-                (click)="editProduct(product)"
+
               ></button>
             </td>
           </tr>
