Equipo de trabajo en la homePage

--- a/weedWeb/src/app/home/home.component.html
+++ b/weedWeb/src/app/home/home.component.html
@@ -141,5 +141,191 @@
       </div>
     </div>
   </div>
+  <div class="tittle" name="desarrollo" id="desarrollo">
+    <h1>Conoce nuestro equipo de trabajo</h1>
+  </div>
+<section>
+  <div class="container1">
+        <div class="card">
+          <div class="box1">
+            <div class="card-content">
+              <div class="image">
+                <img src="../../assets/image/laura.png" alt="Imagen">
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <span class="name">Laura Jaimes</span>
+                <br>
+                <span class="profession">Desarrolladora frontend</span>
+              </div>
+              <div class="about">
+                <p>Soy una desarrolladora junior</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="card">
+          <div class="box2">
+            <div class="card-content">
+              <div class="image">
+                <img src="../../assets/image/mayra.png" alt="Imagen">
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <span class="name">Mayra Sanchez</span>
+                <br>
+                <span class="profession">Desarrolladora frontend</span>
+              </div>
+              <div class="about">
+                <p>Soy una desarrolladora junior</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="card">
+          <div class="box3">
+            <div class="card-content">
+              <div class="image">
+                <img src="../../assets/image/marlon.png" alt="Imagen">
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <span class="name">Marlon Anacona</span>
+                <br>
+                <span class="profession">Desarrollador fullstack</span>
+              </div>
+              <div class="about">
+                <p>Soy una desarrolladora junior</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box1">
+            <div class="card-content">
+              <div class="image">
+                <img src="../../assets/image/gabriel.png" alt="Imagen">
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <span class="name">Gabriel Franco</span>
+                <br>
+                <span class="profession">Desarrollador frontend</span>
+              </div>
+              <div class="about">
+                <p>Soy una desarrolladora junior</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <br>
+      <div class="container2">
+        <br>
+        <div class="card">
+          <div class="box2">
+            <div class="card-content">
+              <div class="image">
+                <img src="../../assets/image/santiago.png" alt="Imagen">
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <span class="name">Santiago Casañas</span>
+                <br>
+                <span class="profession">Desarrollador backend</span>
+              </div>
+              <div class="about">
+                <p>Soy una desarrolladora junior</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="card">
+          <div class="box3">
+            <div class="card-content">
+              <div class="image">
+                <img src="../../assets/image/jesus.png" alt="Imagen">
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <span class="name">Jesus Peña</span>
+                <br>
+                <span class="profession">Desarrollador backend</span>
+              </div>
+              <div class="about">
+                <p>Soy una desarrolladora junior</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box1">
+            <div class="card-content">
+              <div class="image">
+                <img src="../../assets/image/bailon.png" alt="Imagen">
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <span class="name">Juan Jose Bailon</span>
+                <br>
+                <span class="profession">Desarrollador backend</span>
+              </div>
+              <div class="about">
+                <p>Soy una desarrolladora junior</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="card">
+          <div class="box2">
+            <div class="card-content">
+              <div class="image">
+                <img src="../../assets/image/pepa.png" alt="Imagen">
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <span class="name">Alexander Valencia</span>
+                <br>
+                <span class="profession">Desarrollador backend</span>
+              </div>
+              <div class="about">
+                <p>Soy una desarrolladora junior</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <br>
+    <br>
   <app-footer></app-footer>
 </div>
