--- a/weedWeb/src/app/home/home.component.css
+++ b/weedWeb/src/app/home/home.component.css
@@ -1,3 +1,16 @@
+nav {
+  padding: 10px;
+}
+
+.navbar-brand {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+}
+
 .image-container:hover img {
   transform: scale(1.2);
 }
@@ -114,4 +127,132 @@
   color: white;
   font-size: 1.2rem;
   /* otros estilos aquí */
+}
+/* Imagenes */
+
+.tittle{
+  width: 100%;
+  text-align: center;
+  line-height: 24px;
+}
+
+.tittle h1{
+  font-size: 35px;
+  font-weight: 700;
+  padding-top: 70px;
+  padding-bottom: 23px;
+  background: #424143;
+  background: linear-gradient(to right, #006602 40%, #8db228 64%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.container1{
+  display: flex;
+  justify-content: center;
+}
+
+.container2{
+  display: flex;
+  justify-content: center;
+}
+
+.container3{
+  display: flex;
+  justify-content: center;
+}
+
+.card{
+  display: "flexbox";
+  top: 10%;
+  position: relative;
+  background-color: #fff;
+  border-radius: 20px;
+  height: 460px;
+  width: 296px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  margin-left: 35px;
+}
+
+.card .card-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+  position: relative;
+  z-index: 100;
+}
+
+/* .swiper{
+  width: 950px;
+} */
+
+/* section {
+  position: relative;
+  width: 450%;
+  height: 1075px;
+  display: flex;
+  align-items: center;
+} */
+
+section .card .image{
+  height: 140px;
+  width: 140px;
+  border-radius: 50%;
+  padding: 3px;
+  background: #fff;
+  box-shadow: 0px -1px 4px 2px rgba(0, 0, 0, 0.25);
+}
+
+section .card .image img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 3px solid #fff;
+}
+.box1 {
+  position: relative;
+  width: 100%;
+  height: 30%;
+  border-radius: 20px 20px 0 0;
+  background: linear-gradient(106.32deg, #8db228 14.23%, rgba(255,25,25,0) 139.97%);
+  margin-left: auto;
+}
+
+.box2 {
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  border-radius: 20px 20px 0 0;
+  background: linear-gradient(106.32deg, #006602 14.23%, rgba(255,25,25,0) 139.97%);
+}
+
+.box3 {
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  border-radius: 20px 20px 0 0;
+  background: linear-gradient(106.32deg, #565656 14.23%, rgba(255,25,25,0) 139.97%);
+}
+
+
+.name-profession .name{
+  font-size: 20px;
+  font-weight: 600;
+  color: black;
+}
+
+.name-profession .profession{
+  font-size: 15px;
+  font-weight: 500;
+  color: #333;
+}
+
+section .card .about{
+  display: flex;
+  text-align: center;
+  color: #444;
+  margin-top: 45px;
+  margin-bottom: 5px;
 }
