Cambio del menu

--- a/weedWeb/src/app/components/menubar/components.component.html
+++ b/weedWeb/src/app/components/menubar/components.component.html
@@ -66,7 +66,7 @@
           <a class="nav-link" href="/Login">Inicio de sesión</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#desarrollo">Quiénes somos</a>
+          <a class="nav-link" href="#desarrollo">Team </a>
         </li>
       </ul>
     </div>
