semillas en home page

--- a/weedWeb/src/app/components/menubar/components.component.html
+++ b/weedWeb/src/app/components/menubar/components.component.html
@@ -40,7 +40,7 @@
   <div class="container-fluid">
     <a class="navbar-brand">
       <img
-        src="https://pbs.twimg.com/media/ESTSM-NXUAI5DZI.png"
+        src="../../../assets/image/iconMenu.png"
         alt="Logo"
         width="75 "
         height="75 "
