--- a/weedWeb/src/app/home/home.component.html
+++ b/weedWeb/src/app/home/home.component.html
@@ -141,9 +141,23 @@
       </div>
     </div>
   </div>
-  <div class="tittle" name="desarrollo" id="desarrollo">
-    <h1>Conoce nuestro equipo de trabajo</h1>
+
+  <div class="tittle">
+    <h1>Conoce algunos tipos de semillas de cannabis</h1>
   </div>
+  <div class="caja">
+    <div class="images">
+      <img src="../../assets/image/semillaw.png" alt="Imagen">
+      <img src="../../assets/image/semilla1w.png" alt="Imagen">
+      <img src="../../assets/image/semilla2w.png" alt="Imagen">
+    </div>
+</div>
+
+<div class="tittle2" name="desarrollo" id="desarrollo">
+  <h1>Conoce nuestro equipo de trabajo</h1>
+</div>
+
+  <!-- Team -->
 <section>
   <div class="container1">
         <div class="card">
