--- a/weedWeb/src/app/home/home.component.css
+++ b/weedWeb/src/app/home/home.component.css
@@ -22,6 +22,35 @@ nav {
   height: 500px;
 }
 
+.caja{
+  margin-top: 30px;
+  margin-left: 200px;
+  margin-bottom: 100px;
+  width: auto;
+}
+
+.images{
+  display: flex;
+  width: 1100px;
+  height: 350px;
+}
+
+.images img{
+  width: 0px;
+  flex-grow: 5;
+  object-fit: cover;
+  opacity: .7;
+  transition: .5 ease;
+}
+
+.images img:hover{
+  cursor: pointer;
+  width: 550px;
+  opacity: 1;
+  filter: contrast(110%);
+}
+
+
 .container-fluid {
   height: 100vh;
   display: flex;
@@ -128,12 +157,13 @@ nav {
   font-size: 1.2rem;
   /* otros estilos aquí */
 }
-/* Imagenes */
+
 
 .tittle{
   width: 100%;
   text-align: center;
   line-height: 24px;
+  background-color: #424143;
 }
 
 .tittle h1{
@@ -141,15 +171,38 @@ nav {
   font-weight: 700;
   padding-top: 70px;
   padding-bottom: 23px;
-  background: #424143;
-  background: linear-gradient(to right, #006602 40%, #8db228 64%);
+  background: #fff;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
+.tittle2{
+  width: 100%;
+  text-align: center;
+  line-height: 24px;
+  background-color: #424143;
+}
+
+/* .back{
+  width: 20px;
+  background-color: #424143;
+} */
+
+.tittle2 h1{
+  font-size: 35px;
+  font-weight: 700;
+  padding-top: 70px;
+  padding-bottom: 23px;
+  background: #fff;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
 .container1{
   display: flex;
   justify-content: center;
+  margin-top: 50px;
 }
 
 .container2{
@@ -233,7 +286,7 @@ section .card .image img{
   width: 100%;
   height: 30%;
   border-radius: 20px 20px 0 0;
-  background: linear-gradient(106.32deg, #565656 14.23%, rgba(255,25,25,0) 139.97%);
+  background: linear-gradient(106.32deg, #24242c 14.23%, rgba(255,25,25,0) 139.97%);
 }
 
 
