--- a/weedWeb/src/app/home/home.component.html
+++ b/weedWeb/src/app/home/home.component.html
@@ -105,7 +105,6 @@
             La marihuana como uso medicinal se ha utilizado desde muchos paises
             con el objetivo de calmar el dolor de las enfermades
           </p>
-          <p class="card-text"></p>
         </div>
       </div>
       <div class="card bg-dark text-white cuadro-opaco">
@@ -120,7 +119,6 @@
             La marihuana igualmente tiene efectos beneficiosos contra las
             enfermedades neurodegenerativas, tales como el Alzheimer
           </p>
-          <p class="card-text"></p>
         </div>
       </div>
       <div class="card bg-dark text-white cuadro-opaco">
@@ -136,7 +134,6 @@
             es una practica mal vista, sin embargo ayuda al estres y la
             relajación de las personas cuando se fuma (cantidas moderadas)
           </p>
-          <p class="card-text"></p>
         </div>
       </div>
     </div>
@@ -336,6 +333,17 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <div class="tittle2" name="desarrollo" id="desarrollo">
+      <h1>Quienes somos</h1>
+    </div>
+    <section>
+      <div class="card" style="width: 18rem;">
+        <img src="../../assets/image/quienes_somos.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
     </section>
