--- a/weedWeb/src/app/home/home.component.html
+++ b/weedWeb/src/app/home/home.component.html
@@ -113,10 +113,6 @@
             <div class="image">
               <img src="../../assets/image/laura.png" alt="Imagen">
             </div>
-            <div class="media-icons">
-              <i class="fab fa-facebook"></i>
-              <i class="fab fa-github"></i>
-            </div>
             <div class="name-profession">
               <span class="name">Laura Jaimes</span>
               <br>
@@ -135,17 +131,13 @@
             <div class="image">
               <img src="../../assets/image/mayra.png" alt="Imagen">
             </div>
-            <div class="media-icons">
-              <i class="fab fa-facebook"></i>
-              <i class="fab fa-github"></i>
-            </div>
             <div class="name-profession">
               <span class="name">Mayra Sanchez</span>
               <br>
               <span class="profession">Desarrolladora frontend</span>
             </div>
             <div class="about">
-              <p>Soy una desarrolladora junior</p>
+              <p>Soy una desarrolladora junior frontend entusiasta y apasionada por el mundo de la tecnología. Mi objetivo es combinar mi creatividad y mis habilidades técnicas para contribuir al desarrollo de soluciones innovadoras.</p>
             </div>
           </div>
         </div>
@@ -156,10 +148,6 @@
           <div class="card-content">
             <div class="image">
               <img src="../../assets/image/marlon.png" alt="Imagen">
-            </div>
-            <div class="media-icons">
-              <i class="fab fa-facebook"></i>
-              <i class="fab fa-github"></i>
             </div>
             <div class="name-profession">
               <span class="name">Marlon Anacona</span>
@@ -189,7 +177,7 @@
               <span class="profession">Desarrollador frontend</span>
             </div>
             <div class="about">
-              <p>Soy un desarrollador junior</p>
+              <p>Soy un desarrollador junior frontend, con experiencia en el desarrollo con react y angular, con muy buena actitud de salir adelante y mejorar en cada detalle, enseñando y aprendiendo.</p>
             </div>
           </div>
         </div>
@@ -258,7 +246,7 @@
               <span class="profession">Desarrollador backend</span>
             </div>
             <div class="about">
-              <p>Soy una desarrollador junior</p>
+              <p>Soy un desarrollador junior backend, con enfasis en python, Dispuesto a recibir y dar ayuda en todo lo relacionado en el mundo del desarrollo.</p>
             </div>
           </div>
         </div>
